[package]
name = "stax"
version = "0.1.0"
authors = ["chris"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "8.2.0"
unicode-segmentation = "1.7.1"
ndarray = "0.15.0"
ndarray-stats = "0.5.0"
ndarray-linalg = { version = "0.13.0", features = ["openblas-static"] }
